Cards layout for brands, hotels and hotel's floors (images for assets not included yet - alert and brand/hotel/floor images). Fixed <hr> position to match comps better. Fixed horizontal scroll-bar which will show up only when Chrome's windows is smaller than 1920px width.

--- a/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/app.component.css
+++ b/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/app/app.component.css
@@ -3,9 +3,7 @@
 .main-container {
   display: flex; 
   flex-direction: column;
-  width: 1920px;
-  max-width: 1920px;
-  display: inline-block;
+
 }
 
 app-nav-menu {
